[gd_scene load_steps=15 format=3 uid="uid://dbmoavcar0arr"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_cvlrk"]
[ext_resource type="Script" path="res://Scripts/InvBar.gd" id="1_ivc74"]
[ext_resource type="Texture2D" uid="uid://ck67t4n0xvxkp" path="res://Assets/UI/Battery.png" id="1_kcico"]
[ext_resource type="PackedScene" uid="uid://btdwlomkaa7vk" path="res://Scenes/player_menu.tscn" id="2_d230t"]
[ext_resource type="Texture2D" uid="uid://1t5ob6j1gskw" path="res://Assets/UI/Health bar.png" id="2_iihvg"]
[ext_resource type="Texture2D" uid="uid://dedv6pk6kl0qc" path="res://Assets/UI/Item box.png" id="2_ohg1y"]
[ext_resource type="Texture2D" uid="uid://b34kj6xg1ern8" path="res://Assets/Sprites/Collectables/Tree 2.png" id="3_ko4c7"]
[ext_resource type="Texture2D" uid="uid://cl6ao582e8ixe" path="res://Assets/UI/Radiation bar.png" id="3_met5v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6yop"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rusms"]
bg_color = Color(0.172549, 0.682353, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48srj"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqbpj"]
bg_color = Color(0.726034, 0.00123999, 0.000679799, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ni26r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nnbv"]
bg_color = Color(0.988235, 1, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cvlrk")

[node name="PlayerInventory" parent="." instance=ExtResource("2_d230t")]
visible = false

[node name="Control" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -95.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2
size_flags_vertical = 8

[node name="Cell" type="TextureRect" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(45, 90)
layout_mode = 2
texture = ExtResource("1_kcico")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Cell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Battery" type="ProgressBar" parent="Control/HBoxContainer/Cell/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_i6yop")
theme_override_styles/fill = SubResource("StyleBoxFlat_rusms")
fill_mode = 3
show_percentage = false

[node name="Health" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("2_iihvg")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Health"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 43
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="Health" type="ProgressBar" parent="Control/HBoxContainer/Health/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_48srj")
theme_override_styles/fill = SubResource("StyleBoxFlat_gqbpj")
value = 100.0
show_percentage = false

[node name="Rads" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("3_met5v")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Rads"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 43
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="Rads" type="ProgressBar" parent="Control/HBoxContainer/Rads/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ni26r")
theme_override_styles/fill = SubResource("StyleBoxFlat_7nnbv")
show_percentage = false

[node name="InvBar" type="HBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 4.0
script = ExtResource("1_ivc74")

[node name="inv0" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv0"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv0/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv0"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv1" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv1"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv1/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv2" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv2"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv3" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv3"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv4" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv4"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv5" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv5"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv5/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv6" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv6"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv6/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv6"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv7" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv7"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv7/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv7"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "000
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv8" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv8"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv8/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv8"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv9" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv9"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv9/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv9"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv10" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv10"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv10/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv10"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv11" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv11"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv11/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv11"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv12" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv12"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv12/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv12"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="inv13" type="TextureRect" parent="Control/HBoxContainer/InvBar"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_ohg1y")
expand_mode = 5

[node name="HBoxContainer" type="MarginContainer" parent="Control/HBoxContainer/InvBar/inv13"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="pic" type="TextureRect" parent="Control/HBoxContainer/InvBar/inv13/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ko4c7")
expand_mode = 2

[node name="quant" type="Label" parent="Control/HBoxContainer/InvBar/inv13"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
text = "0
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(236.765, 0)
layout_mode = 2
theme_override_constants/margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="InventoryB" type="Button" parent="Control/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Inventory"

[node name="GoHome" type="Button" parent="Control/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Home"

[connection signal="pressed" from="Control/HBoxContainer/MarginContainer/HBoxContainer/InventoryB" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/MarginContainer/HBoxContainer/GoHome" to="." method="_on_go_home_pressed"]
